Fix overflow in homepage

--- a/src/components/Homepage/Homepage.css
+++ b/src/components/Homepage/Homepage.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@400;500;600;700&display=swap');
 
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
 .homepage {
     width: 100%;
     margin: 0px auto;
@@ -7,7 +13,6 @@
     color: white;
     padding: 25px;
     font-family: 'Cormorant Upright', serif;
-
 }
 
 nav {
